Release Notes

* 7/25/2017
  * added blank pilots to harvesterCtl

* 7/17/2017
  * changed ES merge to choose sites with wnconnectivity

* 7/12/2017
  * added background and resourceType in getJob
  * setting background-able flag

* 7/10/2017
  * added command_lock stuff

* 7/6/2017
  * added tighter isolation for check of concurrent running consumers

* 7/3/2017
  * added checkJobStatus

* 6/29/2017
  * added reportWorkerStats and harvesterCtl

* 6/26/2017
  * WQ-GS alignment

* 5/26/2017
  * fixed killJob with keepUnmerged not to discard evens
  * changed SetupAtlas to make _sub when esMergeOnOS is used

* 5/23/2017
  * changed retryJob to reset computingSite to ES merge jobs

* 5/17/2017
  * introduced timeout for throttled jobs
  * changed ES merge to avoid jobseed=es

* 5/8/2017
  * added nSimEvents
  * changed managed to fail when nevents is not set

* 5/3/2017
  * fixed eventStatus=merged for objStore_ID=None

* 5/2/2017
  * added unified PQs
  * added inFilePosEvtNum
  * fixed ppE not to duplicate ES merge jobs

* 4/25/2017
  * fake co-jumbo
  * added path_convention

* 4/24/2017
  * resource_type tagging

* 4/18/2017
  * added subDeleter

* 4/14/2017
  * added noExecStrCnv

* 4/6/2017
  * zip outputs

* 3/20/2017
  * fixed increaseAttemptNr for maxAttempt<attemptNr

* 3/15/2017
  * changed propageR to trigger recalculation of task params based on nDone

* 3/14/2017
  * removed SE check in Adder

* 2/16/2017
  * added getProxy
  * changed killTask.py not to kill holding by default

* 2/10/2017
  * added DBProxyFiltered

* 2/6/2017
  * Protection against undef

* 2/3/2017
  * using schedconfig.dn to specify pilot owners

* 2/2/2017
  * added columns for new memory monitor

* 1/30/2017
  * fixed EiOra for empty streamName
  * fixed updateEventRanges

* 1/27/2017
  * removed dq2 dependency

* 1/23/2017
  * added CAP_RUNNING_USER_JOBS

* 1/11/2017
  * fixed fingers for RFC proxy

* 12/15/2016
  * added mergeEsOnOS